Fix some issues with the login of the account, caused by the refactor